--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Header Styles */
@@ -18,18 +17,12 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 nav ul li {
   margin-right: 15px;
 }
-
 nav ul li a {
   color: #fff;
   text-decoration: none;
@@ -41,12 +34,10 @@ nav ul li a {
   padding: 50px;
   text-align: center;
 }
-
 #home h1 {
   font-size: 36px;
   margin-bottom: 20px;
 }
-
 #home .btn {
   display: inline-block;
   background-color: #333;
@@ -63,24 +54,20 @@ nav ul li a {
   text-align: center;
   display: block;
 }
-
 .menu__title {
   font-size: 2rem;
 }
-
 .menu__section {
   padding-bottom: 1rem;
   font-weight: bold;
   position: relative;
   margin-bottom: 1rem;
 }
-
 .menu__section-title {
   font-weight: bold;
   font-size: 1.5rem;
   margin: 0;
 }
-
 .menu__section::after {
   content: "";
   display: block;
@@ -89,11 +76,9 @@ nav ul li a {
   height: 2px;
   left: 50%;
   bottom: 0;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   background-color: black;
 }
-
 .menu__section:last-child::after {
   content: "";
   display: none;
@@ -103,18 +88,15 @@ nav ul li a {
   display: block;
   padding-top: 2rem;
 }
-
 .menu-item__title {
   margin: 0;
 }
-
 .menu-item__description {
   display: block;
   font-weight: normal;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
-
 .menu-item__price {
   display: block;
 }
@@ -131,12 +113,10 @@ nav ul li a {
   padding: 50px;
   text-align: center;
 }
-
 #contact ul {
   list-style-type: none;
   padding: 0;
 }
-
 #contact ul li {
   margin-bottom: 10px;
 }
@@ -154,22 +134,18 @@ footer {
   font-size: 24px;
   margin-bottom: 10px;
 }
-
 .hours__list {
   list-style-type: none;
   padding: 0;
   text-align: center;
 }
-
 .hours__list__item {
   margin-bottom: 10px;
   font-size: 16px;
 }
-
 .hours__list__item .hours__day {
   font-weight: bold;
 }
-
 .hours__list__item .hours__time {
   color: #888;
 }
@@ -178,47 +154,31 @@ footer {
   max-width: 50%;
   margin: 0 auto;
 }
-
 .reviews__heading {
   text-align: center;
   font-size: 24px;
   margin-bottom: 10px;
 }
-
 .reviews__carousel {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
   white-space: nowrap;
 }
-
 .reviews__slide {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
+  flex: 0 0 100%;
   padding: 10px;
   width: 100%;
-  -webkit-transition: -webkit-transform 0.3s ease-in-out;
-  transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
 }
-
 .reviews__slide + .reviews__slide {
   margin-left: 10px;
 }
-
 .reviews__slide__quote {
   margin-bottom: 5px;
 }
-
 .reviews__slide__rating {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .reviews__slide__rating .reviews__star {
   display: inline-block;
   width: 20px;
@@ -226,21 +186,14 @@ footer {
   background-color: gold;
   margin-right: 5px;
 }
-
 .reviews__slide__author {
   font-style: italic;
 }
-
 .reviews__controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-top: 10px;
 }
-
 .reviews__controls button {
   margin: 0 5px;
   padding: 5px 10px;
@@ -248,8 +201,38 @@ footer {
   background-color: #ddd;
   cursor: pointer;
 }
-
 .reviews__controls button:focus {
   outline: none;
 }
-/*# sourceMappingURL=style.css.map */
+
+.carousel-btn {
+  height: 50px;
+  position: relative;
+}
+
+.carousel-control-next {
+  margin-left: 1rem;
+}
+
+.carousel-item {
+  min-height: 200px;
+}
+
+.fa-star {
+  font-size: 20px;
+}
+
+.checked {
+  color: orange;
+}
+
+.carousel-rating {
+  max-width: 120px;
+  margin: 0 auto;
+}
+
+.carousel-content {
+  max-width: 40%;
+  margin: 0 auto;
+  margin-top: 1.5rem;
+}/*# sourceMappingURL=style.css.map */
