--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ nav ul li a {
   display: block;
 }
 .menu__title {
-  font-size: 2rem;
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
 }
 .menu__section {
   padding-bottom: 1rem;
@@ -65,7 +66,7 @@ nav ul li a {
 }
 .menu__section-title {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin: 0;
 }
 .menu__section::after {
@@ -87,6 +88,9 @@ nav ul li a {
 .menu-item {
   display: block;
   padding-top: 2rem;
+}
+.menu-item:first-of-type {
+  padding-top: 1rem;
 }
 .menu-item__title {
   margin: 0;
@@ -129,6 +133,9 @@ footer {
   text-align: center;
 }
 
+.hours {
+  padding: 50px;
+}
 .hours__heading {
   text-align: center;
   font-size: 24px;
@@ -156,7 +163,7 @@ footer {
 }
 .reviews__heading {
   text-align: center;
-  font-size: 24px;
+  font-size: 3rem;
   margin-bottom: 10px;
 }
 .reviews__carousel {
@@ -208,6 +215,8 @@ footer {
 .carousel-btn {
   height: 50px;
   position: relative;
+  min-width: 100px;
+  width: auto;
 }
 
 .carousel-control-next {
