--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ nav ul li a {
   text-decoration: none;
   margin-top: 20px;
   border-radius: 5px;
+  max-width: 150px;
 }
 
 /* Menu Section Styles */
