--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /* Header Styles */
@@ -17,12 +18,18 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 nav ul li {
   margin-right: 15px;
 }
+
 nav ul li a {
   color: #fff;
   text-decoration: none;
@@ -34,10 +41,12 @@ nav ul li a {
   padding: 50px;
   text-align: center;
 }
+
 #home h1 {
   font-size: 36px;
   margin-bottom: 20px;
 }
+
 #home .btn {
   display: inline-block;
   background-color: #333;
@@ -55,32 +64,44 @@ nav ul li a {
   text-align: center;
   display: block;
 }
+
 .menu__title {
   font-size: 3rem;
   margin-bottom: 1.5rem;
 }
+
 .menu__section {
   padding-bottom: 1rem;
   font-weight: bold;
   position: relative;
   margin-bottom: 1rem;
 }
+
 .menu__section-title {
   font-weight: bold;
   font-size: 2rem;
   margin: 0;
 }
+
 .menu__section::after {
   content: "";
   display: block;
   position: absolute;
-  width: 50%;
+  width: 100%;
   height: 2px;
   left: 50%;
   bottom: 0;
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
   background-color: black;
 }
+
+@media screen and (min-width: 900px) {
+  .menu__section::after {
+    width: 50%;
+  }
+}
+
 .menu__section:last-child::after {
   content: "";
   display: none;
@@ -90,18 +111,22 @@ nav ul li a {
   display: block;
   padding-top: 2rem;
 }
+
 .menu-item:first-of-type {
   padding-top: 1rem;
 }
+
 .menu-item__title {
   margin: 0;
 }
+
 .menu-item__description {
   display: block;
   font-weight: normal;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
 }
+
 .menu-item__price {
   display: block;
 }
@@ -118,10 +143,12 @@ nav ul li a {
   padding: 50px;
   text-align: center;
 }
+
 #contact ul {
   list-style-type: none;
   padding: 0;
 }
+
 #contact ul li {
   margin-bottom: 10px;
 }
@@ -137,23 +164,28 @@ footer {
 .hours {
   padding: 50px;
 }
+
 .hours__heading {
   text-align: center;
   font-size: 24px;
   margin-bottom: 10px;
 }
+
 .hours__list {
   list-style-type: none;
   padding: 0;
   text-align: center;
 }
+
 .hours__list__item {
   margin-bottom: 10px;
   font-size: 16px;
 }
+
 .hours__list__item .hours__day {
   font-weight: bold;
 }
+
 .hours__list__item .hours__time {
   color: #888;
 }
@@ -162,31 +194,47 @@ footer {
   max-width: 50%;
   margin: 0 auto;
 }
+
 .reviews__heading {
   text-align: center;
   font-size: 3rem;
   margin-bottom: 10px;
 }
+
 .reviews__carousel {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
   white-space: nowrap;
 }
+
 .reviews__slide {
-  flex: 0 0 100%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
   padding: 10px;
   width: 100%;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
 }
+
 .reviews__slide + .reviews__slide {
   margin-left: 10px;
 }
+
 .reviews__slide__quote {
   margin-bottom: 5px;
 }
+
 .reviews__slide__rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .reviews__slide__rating .reviews__star {
   display: inline-block;
   width: 20px;
@@ -194,14 +242,21 @@ footer {
   background-color: gold;
   margin-right: 5px;
 }
+
 .reviews__slide__author {
   font-style: italic;
 }
+
 .reviews__controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 10px;
 }
+
 .reviews__controls button {
   margin: 0 5px;
   padding: 5px 10px;
@@ -209,6 +264,7 @@ footer {
   background-color: #ddd;
   cursor: pointer;
 }
+
 .reviews__controls button:focus {
   outline: none;
 }
@@ -245,4 +301,9 @@ footer {
   max-width: 40%;
   margin: 0 auto;
   margin-top: 1.5rem;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.section {
+  max-width: 1600px;
+}
+/*# sourceMappingURL=style.css.map */
