--- a/style.scss
+++ b/style.scss
@@ -86,12 +86,16 @@ body {
             content: "";
             display: block;
             position: absolute;
-            width: 50%;
+            width: 100%;
             height: 2px;
             left: 50%;
             bottom: 0;
             transform: translate(-50%, 0);
             background-color: black;
+
+            @media screen and (min-width: 900px) {
+              width: 50%;
+            }
         }
 
         &:last-child {
@@ -298,4 +302,8 @@ body {
     max-width: 40%;
     margin: 0 auto;
     margin-top: 1.5rem;
+  }
+
+  .section {
+    max-width: 1600px;
   }
