--- a/style.css
+++ b/style.css
@@ -298,9 +298,15 @@ footer {
 }
 
 .carousel-content {
-  max-width: 40%;
+  max-width: 75%;
   margin: 0 auto;
   margin-top: 1.5rem;
+}
+
+@media screen and (min-width: 800px) {
+  .carousel-content {
+    max-width: 40%;
+  }
 }
 
 .section {
